k8s-deployment-rsc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/appnet: "true"
        io.kompose.service: app
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: secret-name
      containers:
        - env:
            - name: APP_DEBUG
              value: "true"
            - name: APP_ENV
              value: local
            - name: APP_KEY
              value: ''
            - name: DB_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_DB
                  name: env
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key: MYSQL_USERNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secret
                  key: MYSQL_PASSWORD
            - name: DB_HOST
              value: db
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_PORT
                  name: env
            - name: GOOGLE_APPLICATION_CREDENTIALS
              value: /var/secrets/google/key.json
          image: gcr.io/$PROJECT_ID/img-name:tag
          imagePullPolicy: IfNotPresent
          name: container-name
          volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "2"
            requests:
              cpu: "250m"
      restartPolicy: Always
status: {}
