k8s-service-rsc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  name: app-svc
spec:
  type: NodePort
  ports:
  - name: "app-http-port"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
