k8s-egress-networkpolicy-rsc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-egress
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "true/false"
  egress:
  - {}
  policyTypes:
  - Egress
