k8s-ingress-networkpolicy-rsc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: appnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/network-name: "true"
  podSelector:
    matchLabels:
      io.kompose.network/network-name: "true"
